--- a/ChiptuneImporter/ChiptuneImporter-Info.plist
+++ b/ChiptuneImporter/ChiptuneImporter-Info.plist
@@ -42,7 +42,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.danielecattaneo.chiptunemdimporter</string>
+	<string>com.danielecattaneo.chiptuneimporter</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -71,7 +71,7 @@
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014 Daniele Cattaneo. All rights reserved.</string>
-	<key>UTExportedTypeDeclarations</key>
+	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict>
 			<key>UTTypeTagSpecification</key>
