--- a/ChiptuneImporter.xcodeproj/xcshareddata/xcschemes/TestInstall.xcscheme
+++ b/ChiptuneImporter.xcodeproj/xcshareddata/xcschemes/TestInstall.xcscheme
@@ -1,28 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0700"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "cd &quot;${SRCROOT}&quot;&#10;VERNO=$(git rev-list HEAD --count)&#10;echo &quot;#define COMMIT_COUNT ${VERNO}&quot; &gt; &quot;$CONFIGURATION_TEMP_DIR/buildnumber.h&quot;&#10;rm &quot;${TARGET_TEMP_DIR}/Preprocessed-Info.plist&quot;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "01FB7F2F193D0E5C003707D7"
-                     BuildableName = "ChiptuneImporter.mdimporter"
-                     BlueprintName = "ChiptuneImporter"
-                     ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -32,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "01FB7F2F193D0E5C003707D7"
-               BuildableName = "ChiptuneImporter.mdimporter"
-               BlueprintName = "ChiptuneImporter"
+               BlueprintIdentifier = "017FE5041BD2DCD100D8C41E"
+               BuildableName = "TestInstall"
+               BlueprintName = "TestInstall"
                ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -60,12 +42,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         FilePath = "/usr/bin/mdimport">
+      </PathRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "01FB7F2F193D0E5C003707D7"
-            BuildableName = "ChiptuneImporter.mdimporter"
-            BlueprintName = "ChiptuneImporter"
+            BlueprintIdentifier = "017FE5041BD2DCD100D8C41E"
+            BuildableName = "TestInstall"
+            BlueprintName = "TestInstall"
             ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -78,10 +64,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <PathRunnable
-         runnableDebuggingMode = "0"
-         FilePath = "/usr/bin/mdimport">
-      </PathRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "017FE5041BD2DCD100D8C41E"
+            BuildableName = "TestInstall"
+            BlueprintName = "TestInstall"
+            ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
