--- a/ChiptuneImporter/ChiptuneImporter-Info.plist
+++ b/ChiptuneImporter/ChiptuneImporter-Info.plist
@@ -11,6 +11,14 @@
 			<string>MDImporter</string>
 			<key>LSItemContentTypes</key>
 			<array>
+				<string>org.sidmusic.sidtune</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>MDImporter</string>
+			<key>LSItemContentTypes</key>
+			<array>
 				<string>org.neilcorlett.psf.nintendods</string>
 			</array>
 		</dict>
@@ -106,7 +114,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.1.0</string>
 	<key>CFBundleVersion</key>
-	<string>134</string>
+	<string>136</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
@@ -131,6 +139,25 @@
 	<string>Copyright © 2014 Daniele Cattaneo. All rights reserved.</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.audio</string>
+				<string>public.data</string>
+				<string>public.content</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>PSID music file</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.sidmusic.sidtune</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>sid</string>
+				</array>
+			</dict>
+		</dict>
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
