--- a/ChiptuneImporter.xcodeproj/xcshareddata/xcschemes/ChiptuneImporter.xcscheme
+++ b/ChiptuneImporter.xcodeproj/xcshareddata/xcschemes/ChiptuneImporter.xcscheme
@@ -46,7 +46,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "01D483DC1E2946E5008E0408"
+               BuildableName = "ChiptuneImporterTest.xctest"
+               BlueprintName = "ChiptuneImporterTest"
+               ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "01FB7F2F193D0E5C003707D7"
+            BuildableName = "ChiptuneImporter.mdimporter"
+            BlueprintName = "ChiptuneImporter"
+            ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -82,6 +101,15 @@
          runnableDebuggingMode = "0"
          FilePath = "/usr/bin/mdimport">
       </PathRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "01FB7F2F193D0E5C003707D7"
+            BuildableName = "ChiptuneImporter.mdimporter"
+            BlueprintName = "ChiptuneImporter"
+            ReferencedContainer = "container:ChiptuneImporter.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
